<resources>
    <string name="app_name">Nibble weather</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_closed">Closed</string>
    <string name="about">About app</string>
    <string name="mailtodev">Mail us</string>
    <string name="action_settings">Settings</string>
    <string name="to_change">Tap text to enter loc or to compass to use GPS</string>
    <string name="btn_img_find_coords">Change place</string>
    <string name="autocompleeterror">Unfortunately, something goes wrong, please try again</string>
    <string name="nonetworcconnection">Check the Internet or try to change place</string>
    <string name="locunavaliable">Location changes deny</string>
    <string name="nodata_close">N/D</string>
    <string name="nodata_full">no data</string>
    <string name="its_weather">no data</string>
    <string name="its_fishing">no data</string>
    <string name="trytoload">Trying to retrieve data from remote server</string>
    <string name="nonewdata">Failed to load data here is the old data… a network or weather server is not available</string>
    <string name="stoprefresh">updating data for same location allow only one time per hour</string>
    <string name="nordeast">n-east</string>
    <string name="east">east</string>
    <string name="southeast">s-east</string>
    <string name="south">south</string>
    <string name="southwest">s-west</string>
    <string name="west">west</string>
    <string name="nordwest">n-west</string>
    <string name="north">north</string>
    <string name="wind">wind: </string>
    <string name="pressure">pressure:</string>
    <string name="percipe">perc.prob:</string>
    <string name="mmrtst">mmHg</string>
    <string name="mps">m/s</string>
    <string name="nogps">GPS unavailable or no access permission</string>
    <string name="gpsenabled">GPS enabled, you can use compass button</string>
    <string name="gpsdisabled">GPS disabled, your location do not updates</string>
    <string name="pleaseenablegps">This function is disable when GPS is off. Please enable GPS and then push BACK</string>
    <string name="email_subj">Aboun your app - Weather For Fishing</string>
    <string name="nosuchactivity">No app to send e-mail found</string>
    <string name="gotit">I got it!</string>
    <string name="pleasereadabout">Using this app you’re completely agreeing to terms and conditions in “About app” section</string>
    <string name="nothingtosetup">Sorry, settings unavailable in this version of app</string>
    <string name="straightarrow">Tap the text to change place of forecast</string>
    <string name="inclinedarrow">Tap the compass icon to show forecast in your current place</string>
    <string name="oval">Here is the forecast - when fish looks cheerful, nibble will be better</string>
    <string name="horizontalarrow">Here is the forecast - when fish looks cheerful, nibble will be better</string>
    <string name="termsofusage">(App) is freeware application with open source code, developed by Eyesless.dev
        (you could see the App code on our GitHub account). This app is in beta-test phase and distributed “as-is”
        without any commitment from the developer to user or third part. The only way we distribute this App -
        Google Play, please DO NOT install this app from any another source. If you using this app it means, you’re accept
        all possible risks of this using, and you’re agreed, that you , and only you completely responsible for any of consequences,
        of this action. Otherwise, you should stop using and should delete this app from your device immediately.</string>
    <string name="arrow">arrow</string>
    <string name="secondbackpressed">press one more time to exit app</string>
    <string name="tapanyplace">Tap on screen to continue</string>
    <string name="chooseemailapp">Choose E-MAIL app(NOT MESSENGER)</string>
    <string name="pressonemoretime">Press on COMPASS icon to get GPS coordinates</string>



</resources>
