<android.support.constraint.ConstraintLayout
    android:id="@+id/constraint_onboarding"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context="dev.eyesless.simple_weather_for_fishermans.AMainActivity"
    android:background="@color/colorWithTransparency">

    <ImageView
        android:id="@+id/imageView_straihgtarrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/arrow_straight"
        app:layout_constraintVertical_bias="0.7"
        app:layout_constraintBottom_toTopOf="@+id/onboarding_straight_arrow"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/arrow" />

    <TextView
        android:id="@+id/onboarding_straight_arrow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_textview"
        android:gravity="start"
        android:text="@string/straightarrow"
        android:textColor="@color/colorAccent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/onboarding_inclined_arrow"
        app:layout_constraintWidth_default="wrap" />

    <ImageView
        android:id="@+id/imageView_inclinedarrow"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="32dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/arrow_inclined"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/arrow" />

    <TextView
        android:id="@+id/onboarding_inclined_arrow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:gravity="end"
        android:text="@string/inclinedarrow"
        android:textColor="@color/colorAccent"
        android:background="@drawable/custom_textview"
        app:layout_constraintWidth_default="wrap"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView_straihgtarrow"
        app:layout_constraintTop_toBottomOf="@+id/imageView_inclinedarrow" />

    <TextView
        android:id="@+id/ok_with_onboarding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/tapanyplace"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/text_size_big"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView_oval"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/oval"
        app:layout_constraintBottom_toTopOf="@+id/ok_with_onboarding"
        app:layout_constraintHeight_default="spread"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/onboarding_straight_arrow"
        app:layout_constraintWidth_default="wrap"
        android:contentDescription="@string/arrow" />

    <TextView
        android:id="@+id/onboarding_oval"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="start"
        android:text="@string/oval"
        android:textColor="@color/colorAccent"
        android:background="@drawable/custom_textview"
        app:layout_constraintBottom_toBottomOf="@+id/imageView_oval"
        app:layout_constraintWidth_default="wrap"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/imageView_oval"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView_oval" />



</android.support.constraint.ConstraintLayout>