<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="1dp"
    app:cardCornerRadius="3dp"
    android:elevation="3dp"
    app:cardUseCompatPadding="true"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view_weather"
    >

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <TextView
                android:id="@+id/textView_tempr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nodata_close"
                android:textSize="@dimen/text_size_big"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginStart="8dp" />

            <ImageView
                android:id="@+id/imageView_drop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/drop"
                android:contentDescription="@string/its_weather"
                android:foregroundGravity="center"
                app:layout_constraintTop_toTopOf="@+id/textView_tempr"
                app:layout_constraintBottom_toBottomOf="@+id/textView_tempr"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="0dp"
                app:layout_constraintLeft_toRightOf="@+id/textView_tempr"
                android:layout_marginStart="16dp" />

            <TextView
                android:id="@+id/textView_percip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nodata_close"
                android:textSize="@dimen/text_size_big"
                app:layout_constraintLeft_toRightOf="@+id/imageView_drop"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp"
                android:layout_marginStart="0dp" />

            <ImageView
                android:id="@+id/imageView_weather"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_sync_black_48dp"
                android:contentDescription="@string/its_weather"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp"
                app:layout_constraintRight_toLeftOf="@+id/imageView_fish"
                android:layout_marginEnd="8dp" />

            <ImageView
                android:id="@+id/imageView_fish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_sync_black_48dp"
                android:contentDescription="@string/its_fishing"
                android:layout_marginEnd="8dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp" />

            <TextView
                android:id="@+id/textView_wind"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="0dp"
                android:text="@string/nodata_full"
                android:textSize="@dimen/text_size_small"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_tempr" />

            <TextView
                android:id="@+id/textView_pressure"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="0dp"
                android:text="@string/nodata_full"
                android:textSize="@dimen/text_size_small"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_wind" />

            <TextView
                android:id="@+id/textView_data"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="0dp"
                android:text="@string/nodata_full"
                android:textSize="@dimen/text_size_small"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView_pressure" />

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>